# openGL

./: README.md
HelloTriangle/: CMakeLists.txt  main.cpp
OpenWindow/: main.cpp
Shader/: CMakeLists.txt  main.cpp
Shader/include/glad/: glad.h
Shader/shaderFile/: vertex.txt
Shader/src/: Shader.cpp  Shader.h
Texture/: CMakeLists.txt  TestGLM.cpp  main.cpp
Texture/shaderFile/: fragment.txt  vertex.txt
Texture/src/: Shader.cpp  glad.c
